Implement decentralized Bluesky authentication using atproto
Updated Program.cs to register AtProtoClient, AtprotoService, and custom authentication providers.

Migrated the login flow to use the atproto library's CreateSession for session creation.

Updated appsettings.json with Bluesky OAuth configuration (ClientId, ClientSecret, CallbackPath, etc.).

Integrated a custom authentication state provider with token management and stubbed methods for session refresh and DID resolution.

Cleaned up obsolete methods and resolved multiple DI and naming issues.

--- a/src/Yonderfix.web/Yonderfix.web/appsettings.json
+++ b/src/Yonderfix.web/Yonderfix.web/appsettings.json
@@ -8,5 +8,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Bluesky": {
+      // Required by your Program.cs for OAuth:
+      "ClientId": "https://app.yonderfix.com/oauth/client-metadata.json",
+      "ClientSecret": "YOUR_BSKY_SECRET_HERE",
+      "CallbackPath": "/Account/Callback",
+      "TokenEndpoint": "https://your-entryway.example.com/.well-known/oauth-token-endpoint",
+
+      // Already in your file:
+      "RedirectUri": "https://localhost:7056/Account/Callback",
+      "PushedAuthorizationRequestEndpoint": "https://your-entryway.example.com/.well-known/oauth-par",
+      "AuthorizationEndpoint": "https://your-entryway.example.com/.well-known/oauth-authorization-server"
+    }
+  }
 }
+
